Prevent contact icons from overflowing on mobile displays

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -33,16 +33,21 @@
 
 .contact-buttons {
   padding-top: 20px;
+  /* padding-bottom: 20px; */
   width: 100%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
-  max-height: 50px;
-  gap: 50px;
+  /* max-height: 50px; */
+  /* gap: 50px; */
 }
 
 .contact-icon {
   max-height: 50px;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-bottom: 50px;
   transition: 0.3s;
   filter: invert(1);
 }
